Criando view index para listagem de photos

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,14 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Photogallery</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  <%= csrf_meta_tags %>
+	<title>Photogallery</title>
+	<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
+	<%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+	<%= csrf_meta_tags %>
 </head>
 <body>
 
-<%= yield %>
-
+	<header class="header">
+		<div class="container">
+			<nav>
+				<ul>
+					<li><%= link_to 'Visualizar Slide', '/' %></li>
+					<li><%= link_to 'Gerenciar Imagens', images_path %></li>
+				</ul>
+			</nav>
+		</div>
+	</header>
+	<main role="main">
+		<div class="container">
+			<%= yield %>
+		</div>
+	</main>
+	
 </body>
 </html>
