Criando form para cadastrar nova imagem

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 			<nav>
 				<ul>
 					<li><%= link_to 'Visualizar Slide', '/' %></li>
-					<li><%= link_to 'Gerenciar Imagens', images_path %></li>
+					<li><%= link_to 'Gerenciar Imagens', photos_path %></li>
 				</ul>
 			</nav>
 		</div>
@@ -23,6 +23,6 @@
 			<%= yield %>
 		</div>
 	</main>
-	
+
 </body>
 </html>
