--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -3,18 +3,18 @@
 <p id="alert alert--success"><%= notice %></p>
 
 <div class="lista-imagens">
-	<% @images.each do |image| %>
+	<% @photos.each do |photo| %>
 	<div class="item">
 		<div class="thumb">
 			<div class="centered">
-				<%= image_tag image.image_file.url(:thumb) %>
+				<%= image_tag photo.photo.url(:thumb) %>
 			</div>
 		</div>
 		<div class="details">
-			<%= link_to edit_image_path(image) do %>
+			<%= link_to edit_photo_path(photo) do %>
 				<i class="icon-pencil"></i>
 			<% end %>
-			<%= link_to image, method: :delete, data: { confirm: 'Deseja realmente excluir?' } do %>
+			<%= link_to photo, method: :delete, data: { confirm: 'Deseja realmente excluir?' } do %>
 				<i class="icon-remove"></i>
 			<% end %>
 		</div>
@@ -22,8 +22,4 @@
 	<% end %>
 </div>
 
-<!-- <ul ng-repeat="image in images">
-	<li >{{image.nome}} - <a href="#" ng-click="deleteImage($index)">Remover</a></li>
-</ul> -->
-
-<%= link_to 'Cadastrar Nova', new_image_path, :class => "btn" %>
+<%= link_to 'Cadastrar Nova', new_photo_path, :class => "btn" %>
