--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -14,10 +14,12 @@
 	<%= f.label :nome, 'Nome da Imagem' %>
 	<%= f.text_field :title %>
 </p>
-
+<% if @photo.photo? %>
+	<%= image_tag @photo.photo.url(:thumb) %>
+<% end %>
 <p>
-	<%= f.label :image_file %>
-	<%= f.file_field :image_file %>
+	<%= f.label :photo %>
+	<%= f.file_field :photo %>
 </p>
 <p>
 	<% if @photo.new_record? %> 
