Adicionando font icons

--- a/app/assets/stylesheets/theme.css.scss
+++ b/app/assets/stylesheets/theme.css.scss
@@ -16,6 +16,12 @@ ul {
 	margin: 0 auto;
 }
 
+.page-content {
+	padding: 20px;
+	margin-top: 20px;
+	background: #fff;
+}
+
 .header {
 	width: 100%;
 	background: #222A38;
@@ -50,4 +56,79 @@ label {
 }
 input {
 	display: block;
+}
+
+h1 {
+	color: #58719C;
+	margin: 0.2em 0;
+}
+h2 {
+	color: #555;
+	margin: 0 0 2em;
+	font-size: 16px;
+}
+
+.lista-imagens {
+	overflow-x: hidden;
+	overflow-y: auto;
+	margin: 9px 0 25px;
+
+	.item {
+		position: relative;
+		display: inline-block;
+		margin: 8px;
+		cursor: pointer;
+		border: 1px solid #ddd;
+		border-radius: 4px;
+		background: #f9f9f9;
+		&:hover {
+			border-color: #aaa;
+		}
+		img {
+			width: auto;
+			max-height: 118px;
+		}
+		&:nth-child(6n+1) { margin-left: 2px; }
+		&:nth-child(6n) { margin-right: 0; }
+	}
+	.thumb {
+		position: relative;
+		overflow: hidden;
+		width: 134px;
+		height: 134px;
+	}
+	.centered {
+		position: absolute;
+		top: 0;
+		left: 0;
+		width: 100%;
+		height: 100%;
+		-webkit-transform: translate(50%,50%);
+		-ms-transform: translate(50%,50%);
+		transform: translate(50%,50%);
+		img {
+			-webkit-transform: translate(-50%,-50%);
+			-ms-transform: translate(-50%,-50%);
+			transform: translate(-50%,-50%);
+		}
+	}
+}
+
+.details {
+	display: none;
+	position: absolute;
+	top: 5px;
+	right: 5px;
+	.item:hover & {
+		display: block !important;
+	}
+	a {
+		padding: 5px;
+		background: #5A7BC2;
+		margin: 1px;
+		color: #fff;
+		text-decoration: none;
+		display: inline-flex;
+		border-radius: 3px;
+	}
 }
