--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,7 +19,7 @@
 		</div>
 	</header>
 	<main role="main">
-		<div class="container">
+		<div class="container page-content">
 			<%= yield %>
 		</div>
 	</main>
