--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -18,7 +18,7 @@
 	<%= image_tag @photo.photo.url(:thumb) %>
 <% end %>
 <p>
-	<%= f.label :photo %>
+	<%= f.label :imagem %>
 	<%= f.file_field :photo %>
 </p>
 <p>
