--- a/app/views/photos/_form.html.erb
+++ b/app/views/photos/_form.html.erb
@@ -23,10 +23,11 @@
 </p>
 <p>
 	<% if @photo.new_record? %> 
-		<%= f.submit "Cadastrar Imagem", :class => "btn" %>
+		<%= f.submit "Cadastrar Imagem", :class => "button button-primary"  %>
 	<% else %>
-		<%= f.submit "Editar Imagem", :class => "btn" %>
+		<%= f.submit "Editar Imagem", :class => "button button-primary"  %>
 	<% end %>
+	<%= link_to 'Voltar para listagem', photos_path, :class => "button button-link" %>
 </p>
 
 <% end %>
