--- a/app/views/photos/index.html.erb
+++ b/app/views/photos/index.html.erb
@@ -22,4 +22,4 @@
 	<% end %>
 </div>
 
-<%= link_to 'Cadastrar Nova', new_photo_path, :class => "btn" %>
+<%= link_to 'Cadastrar Nova', new_photo_path, :class => "button button-primary" %>
