--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,7 @@
 	<%= csrf_meta_tags %>
 </head>
 <body>
-
+	<div class="skip"><a href="#content">Ir para o conteúdo</a></div>
 	<header class="header">
 		<div class="container">
 			<nav>
@@ -18,7 +18,7 @@
 			</nav>
 		</div>
 	</header>
-	<main role="main">
+	<main role="main" id="content">
 		<div class="container page-content">
 			<%= yield %>
 		</div>
