--- a/app/assets/stylesheets/common/_forms.css.scss
+++ b/app/assets/stylesheets/common/_forms.css.scss
@@ -8,19 +8,16 @@ label {
 }
 
 input[type="text"] {
+	display: block;
+	padding: 0.44444rem;
+	width: 100%;
 	-webkit-appearance: none;
 	-webkit-border-radius: 0px;
 	background-color: #FFF;
 	font-family: inherit;
-	border-style: solid;
-	border-width: 1px;
-	border-color: #CCC;
-	box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
-	color: rgba(0, 0, 0, 0.75);
-	display: block;
-	font-size: 0.77778rem;
-	margin: 0 0 0.88889rem 0;
-	padding: 0.44444rem;
-	height: 2.05556rem;
-	width: 100%;
+	border: 1px solid #CCC;
+}
+
+.form-action {
+	margin-top: 30px;
 }
