Correcao detalhes da listagem de imagens

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 		<div class="container">
 			<nav>
 				<ul>
-					<li><%= link_to 'Visualizar Slide', '/photos/view' %></li>
+					<li><%= link_to 'Visualizar Galeria', '/photos/view' %></li>
 					<li><%= link_to 'Gerenciar Imagens', photos_path %></li>
 				</ul>
 			</nav>
