--- a/app/assets/stylesheets/common/_base.css.scss
+++ b/app/assets/stylesheets/common/_base.css.scss
@@ -25,7 +25,7 @@ body {
 	width: 1px;
 	height: 1px;
 	overflow: hidden;
-	&::focus { 
+	&:focus { 
 		position: static; 
 		width: auto; 
 		height: auto; 
