Adicionando git st

--- a/app/assets/stylesheets/iconfont.css.erb
+++ b/app/assets/stylesheets/iconfont.css.erb
@@ -26,6 +26,9 @@
 .icon-pencil:before {
 	content: "\e600";
 }
+.icon-keyboard:before {
+	content: "\e602";
+}
 .icon-remove:before {
 	content: "\e601";
 }
