--- a/app/views/photos/view.html.erb
+++ b/app/views/photos/view.html.erb
@@ -1,6 +1,13 @@
 <h1>Galeria</h1>
 
 <div class="slideshow">
+	<div class="keyboard">
+		<i class="icon-keyboard"></i>
+		<div class="keyboard-content">
+			Utilize a tecla ← para navegar à esquerda <br>
+			Utilize a tecla → para navegar à direita
+		</div>
+	</div>
 	<div class="slider">
 		<% @photos.each do |photo| %>
 		<figure class="slide">
